--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "type": "git",
     "url": "https://github.com/llorx/custom-require"
   },
-  "version": "0.0.6"
+  "version": "0.0.6",
+  "dependencies": {
+    "callsite": "^1.0.0"
+  }
 }
